data/usersCode/cnjcn/question1/error.txt
/home/ram/myenv/ro22/data/usersCode/cnjcn/question1/code1-1.cpp:1:1: error: ‘dcsdcsd’ does not name a type
 dcsdcsd
 ^~~~~~~
